--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
-<html>
-    <head>
-        <title>BlueBrain</title>
-        <link rel="stylesheet" href="css/style.css" rel="stylesheet" type="text/css">
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-
-        <!-- jQuery library -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-        <!-- Popper JS -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
-        <!-- Latest compiled JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Blue Brain</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+	<link href="style.css" rel="stylesheet">
+</head>
     <body>
-        <div class="container">
-            <div class="row">
-                <nav>
-                    <ul>
-                        <li><a href="">home</a></li>
-                        <li><a href="">work</a></li>
-                        <li><a href="">services</a></li>
-                        <li><a href="">clients</a></li>
-                        <li><a href="">our team</a></li>
-                        <li><a href="">contact</a></li>
-                    </ul>
-                </nav>
-            </div>
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+    <div class="container-fluid">
+        <a class="nav-brand" href="#"><img src="image/logo.png"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" 
+        data-target="#navbarResponsive">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="https://mrjarbear.wixsite.com/bluebrainllc">Company</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/SunnyRo/Software-Engineering">Github</a>
+                </li>
+            </ul>
         </div>
+    </div>
     </body>
 </html>
