--- a/index.html
+++ b/index.html
@@ -31,8 +31,96 @@
                  <li class="nav-item">
                     <a class="nav-link" href="https://github.com/SunnyRo/Software-Engineering">Github</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.youtube.com/watch?v=9cKsq14Kfsw&t=3751s">Source</a>
+                </li>
             </ul>
         </div>
+    </div>
+    </nav>
+    <!-- Image Slider-->
+    <div id="slides" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+            <li data-target="#slides" data-slide-to="0" class="active"></li>
+            <li data-target="#slides" data-slide-to="1"></li>
+            <li data-target="#slides" data-slide-to="2"></li>
+        </ul>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="image/background.png">
+                <div class="carousel-caption">
+                    <h1 class="display-2">bluebrainllc</h1>
+                    <h3>Food delievery service</h3>
+                </div>
+            </div>
+             <div class="carousel-item">
+                <img src="image/background2.png">
+            </div>
+             <div class="carousel-item">
+                <img src="image/background3.png">
+            </div>
+        </div>
+    </div>
+    <!-- Welcome section-->
+    <div class="container-fluid padding">
+    <div class="row welcome text-center">
+        <div class="col-12">
+            <h1 class="display-4">Delivery service</h1>
+        </div>
+        <hr>
+        <div class="col-12">
+            <p class="lead">Welcome to our website.....................anything here I dont know</p>
+        </div>
+    </div>
+    </div>
+    <!-- connect-->
+    <div class="container-fluid padding">
+    <div class="row text-center padding">
+        <div class="col-12">
+            <h2>connect</h2>
+        </div>
+        <div class="col-12 social padding">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-google-plus-g"></i></a>
+        </div>
+    </div>
+    <!-- footer-->
+    <footer>
+        <div class="container-fluid padding">
+        <div class="row text-center">
+            <div class="col-md-4">
+                <img src="image/w3newbie.png">
+                <hr class="light">
+                <p>555-555-5555</p>
+                <p>email@gmail.com</p>
+                <p>adress....</p>
+            </div>
+            <div class="col-md-4">
+                <hr class="light">
+                <h5>Our hours</h5>
+                <hr class="light">
+                <p>Monday: 9am - 5pm</p>
+                <p>Saturday: 9am - 5pm</p>
+                <p>Sunday: 9am - 5pm</p>
+                
+            </div>
+            <div class="col-md-4">
+                <hr class="light">
+                <h5>Our hours</h5>
+                <hr class="light">
+                <p>Monday: 9am - 5pm</p>
+                <p>Saturday: 9am - 5pm</p>
+                <p>Sunday: 9am - 5pm</p>
+                
+            </div>
+            <div class="col-12">
+                <hr class="light">
+                <h5>&copy; Bluebrain.com</h5>
+            </div>
+        </div>
+        </div>
+    </footer>
     </div>
     </body>
 </html>
