--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="container-fluid padding">
         <div class="row text-center">
             <div class="col-md-4">
-                <img src="image/w3newbie.png">
+                <img src="image/logo.png">
                 <hr class="light">
                 <p>555-555-5555</p>
                 <p>email@gmail.com</p>
