--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
                  <li class="nav-item">
                     <a class="nav-link" href="https://mrjarbear.wixsite.com/bluebrainllc">Company</a>
                 </li>
-                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/SunnyRo/Software-Engineering">Github</a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.youtube.com/watch?v=9cKsq14Kfsw&t=3751s">Source</a>
                 </li>
@@ -47,9 +44,9 @@
         </ul>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="image/background.png">
+                <img src="image/background1.png">
                 <div class="carousel-caption">
-                    <h1 class="display-2">bluebrainllc</h1>
+                    <h1 class="display-2">Blue Brain LLC</h1>
                     <h3>Food delievery service</h3>
                 </div>
             </div>
