--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <hr class="light">
                 <p>555-555-5555</p>
                 <p>email@gmail.com</p>
-                <p>adress....</p>
+                <p>address....</p>
             </div>
             <div class="col-md-4">
                 <hr class="light">
